# oop6

./: CMakeLists.txt  README.md  main.cpp
include/: druid.h  npc.h  squirrel.h  werewolf.h
src/: druid.cpp  npc.cpp  squirrel.cpp  werewolf.cpp
tests/: test.cpp
